--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -231,6 +231,7 @@ body > main {
 
   p, li {
     line-height: $line-height-post-text;
+    text-align: justify;
   }
 
   .anchorjs-link {
